--- a/static/styles.css
+++ b/static/styles.css
@@ -1,6 +1,9 @@
 html, body {
-    font-family: sans-serif;
-    margin: 0;
+    font-family: "work sans", sans-serif;
     font-size: 20px;
+    margin: 0;
+    width: 100%;
+    height: 100%;
+    position: absolute;
 }
 
